--- a/Wechat.Util/Wechat.Util.csproj
+++ b/Wechat.Util/Wechat.Util.csproj
@@ -62,6 +62,9 @@
     <PackageReference Include="StackExchange.Redis">
       <Version>2.0.519</Version>
     </PackageReference>
+    <PackageReference Include="ZXing.Net">
+      <Version>0.16.4</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
